[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "abacura"
version = "1.0.0"
description = "Multi-session MUD client written in Python with Textual library"
authors = ["Tom Allen <tom@nonserviam.net>"]
license = "Other/Proprietary License"
homepage = "https://github.com/perlsaiyan/abacura"
documentation = "https://perlsaiyan.github.io/abacura"
packages = [{include = "abacura"}]

[tool.poetry.dependencies]
python = "^3.10"
asynctelnet = "0.2.5"
click = "8.1.3"
textual = "~5.1.1"
tomlkit = "0.11.8"
numpy = "*"
plotext = "*"
pillow = "*"
textual_image = { version = "*" }

[tool.poetry.scripts]
abacura = "abacura.abacura:main"

[tool.poetry.dev-dependencies]
abacura_kallisti = { path = "../abacura_kallisti" }

